--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic");
-
-@font-face {
-    font-family: 'Bemol-CapsMix2';
-    src: url('../fonts/Bemol-CapsMix2.woff2') format('woff2'),
-        url('../fonts/Bemol-CapsMix2.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
 @font-face {
     font-family: 'Pobeda';
     src: url('../fonts/Pobeda-Regular.woff2') format('woff2'),
@@ -16,6 +6,7 @@
     font-style: normal;
     font-display: swap;
 }
+
 
 
 /* Стили обнуления */
@@ -49,351 +40,128 @@ h6 {
 img {
 	vertical-align: top;
 }
-/* ============================================================================ */
 body {
-	background-color: darkgray;
+	background: linear-gradient(135deg, rgba(206,220,231,1) 44%,rgba(206,220,231,1) 55%,rgba(89,106,114,1) 100%);
 }
 .header {
-	background: url('../img/4.jpg') fixed;
-}
-.main {
-	max-width: 1000px;
-	margin: 0 auto;
-}
-.header img {
-	display: block;
-	max-width: 450px;
-	margin: 0px auto;
-	padding: 50px 0;
-}
-.nav {
-	text-align: center;
-	font-size: 22px;
-	background-color: blanchedalmond;
-}
-.nav a {
-	display: inline-block;
-	letter-spacing: 3px;
-	margin: 20px 0px;
-	color: black;
-	padding: 0 20px;
-}
-.nav a:hover {       /* Срабатывает при наведении */
-	color: brown;
-	text-decoration: overline;
-	text-shadow: 2px 7px 5px #000;
-	font-size: 27px;
-}
-h1 {
-	font-size: 35px;
-	margin: 40px 0 30px 0;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	font-weight: 700;
-}
-h1::after {
-	content: "";
-	height: 5px;
-	max-width: 78%;
-	display: block;                   /* Установили нижнее подчеркивание заголовку */
-	background-color: violet;
-	margin: 5px 0 0 0;
-}
-.info span {
-	color: dimgray;
-	font-weight: 600;
-}
-.info p:first-child {
-	color: firebrick;
-	margin-bottom: 20px;
-}
-/* ============================================ */
-.paragraph img {
-	display: block;
-	width: 250px;
-	max-width: 250px;
-	margin: 0 auto;
-}
-.paragraph {
-	display: inline-block;
-	margin: 15px 10px;
-	width: 300px;
-	height: 450px;
-	border: 2px solid crimson;
-	vertical-align: top;
-	background-color: white;
-}
-.paragraph a {
-	color: crimson;
-	display: block;
+	width: 1000px;
 	margin: 10px auto;
-	width: 200px;
+	background-color: rgb(102, 20, 20);
+	border-radius: 5px 50px 5px 50px;
+}
+.header_list {
 	text-align: center;
-}
-.paragraph a:focus {               
-	border: 2px dashed crimson;
-}
-.paragraph p {
-	padding: 10px;
-}
-/* =============================================== */
-.paragraph_2 img {
-	display: block;
-	width: 250px;
-	max-width: 250px;
-	margin: 0 auto;
-}
-.paragraph_2 {
-	width: 300px;
-	height: 450px;
-	display: block;
-	border: 3px solid crimson ;
-	display: inline-block;
-	vertical-align: top;
-	margin: 0 10px;
-	background-color: white;
-}
-.paragraph_2 p {
-	padding: 10px;
-}
-.paragraph_2 p span {
-	font-weight: 700;
-}
-.paragraph_2 p span:hover {
-	color: rgb(0, 90, 12);
-	font-size: 21px;
-}
-.paragraph_2 p span:hover::before {
-	content: '';
-	width: 10px;
-	height: 10px;
-	display: inline-block;                  /* добавили маркер перед параграфом */
-	background: rgb(60, 63, 56);
-	margin: 0 0 0 -5px;
-	border-radius: 0 3px 0 3px;
-}
-.paragraph_2 a {
-	display: block;
-	text-align: center;
-	padding: 10px 0;
-	color: crimson ;
+	font-size: 23px;
 	font-family: 'Pobeda';
-	font-size: 20px;
-	font-weight: 900;
-}
-.paragraph_2 a:active {       /* срабатывает при нажатии */
-	color: rgb(0, 29, 73);
-}
-/* ===================================== */
-.paragraph_3 img {
-	display: block;
-	width: 250px;
-	max-width: 250px;
-	margin: 0 auto;
-}
-.paragraph_3 h2 {
-	display: block;
-	width: 160px;
-	margin: 0 auto;
-	padding: 10px;
-	color: darkblue;
-	font-size: 18px;
-	text-shadow: 4px 5px 3px rgb(190, 16, 16);
-}
-.paragraph_3 h2:hover {
-	content: "";
-	border: 2px solid crimson;
-}
-.paragraph_3 {
-	display: inline-block;
-	width: 300px;
-	background-color: rgb(247, 247, 247);
-	margin: 10px;
-	border: 4px solid crimson;
-	vertical-align: top;
-}
-.paragraph_3 p {
-	padding: 5px;
-}
-.paragraph_3_info p:nth-child(3) {
-	color: rgb(21, 66, 0);
-	text-shadow: 6px 2px 2px rgb(14, 167, 0);
-}
-/* =================================================================ы */
-.paragraph_4 img {
-	display: block;
-	width: 250px;
-	max-width: 250px;
-	margin: 0 auto;
-}
-.paragraph_4 {
-	display: inline-block;
-	width: 300px;
-	border: 2px dashed crimson;
-	vertical-align: top;
-	margin: 10px;
-	background-color: cyan;
-}
-.paragraph_4 h2 {
-	text-align: center;
-	padding: 10px;
 	letter-spacing: 4px;
+	text-transform: uppercase;
+	
 }
-.paragraph_4 h2:hover {
-	text-shadow: -4px 5px 1px #000;
+.header_list > li {
+	position: relative;
+	display: inline-block;
+	margin: 0 50px 0 0 ;
 }
-.paragraph_4_info p {
-	padding: 5px;
-}
-.paragraph_4_info p:first-of-type {
-	background-color: lime;
-}
-/* ========================================== */
-.paragraph_5 img {
+.header_list > li:hover .header_sub_list {
 	display: block;
-	width: 250px;
-	max-width: 250px;
-	margin: 0 auto;
 }
-.paragraph_5:hover {
-	background-color: darkgreen;
+.header_list > li:hover .header_link {
+	color: blue;
 }
-.paragraph_5 {
+.header_list > li:last-child {
+	margin-right: 0;
+}
+.header_list > li:last-child .header_sub_list {
+	right: 0;
+}
+.header_link {
 	display: inline-block;
-	width: 300px;
-	border: 2px solid crimson;
-	background-color: rgba(0, 100, 0, 0.233);
-	margin: 10px;
+	padding: 20px 0;
+	color: rgb(241, 241, 241);
 }
-.paragraph_5 h2 {
-	text-align: center;
-	padding: 10px;
-}
-
-.paragraph_5 p {
-	padding: 5px;
-}
-.paragraph_5 p:last-of-type {
-	color: rgb(163, 180, 3);
-	font-style: italic;
-	font-size: 18px;
-}
-.open {
-	display: inline-block;
-	padding: 5px;
-	color: rgb(109, 182, 255);
-}
-.text {
+.header_sub_list {
 	display: none;
-	background-color: lime;
-}
-.text:target {
-	display: block;
-}
-/* ================================== */
-.paragraph_6 img {
-	display: block;
-	width: 250px;
-	margin: 0 auto;
-}
-.paragraph_6 {
-	display: inline-block;
-	margin: 10px;
-	width: 300px;
-	border: 3px solid crimson;
-	vertical-align: top;
-}
-.paragraph_6 a {
-	display: block;
-	text-align: center;
+	top: 100%;
+	position: absolute;
+	background-color: rgb(110, 108, 108);
 	padding: 10px;
-}
-.paragraph_6 a:focus {
-	border: 5px solid cyan;
-}
-.paragraph_6 p {
-	padding: 10px;
-}
-.paragraph_6 p:nth-child(odd) {
-	background-color: maroon;
-	font-size: 18px;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-/* ======================================= */
-.paragraph_7 img {
-	width: 250px;
-	display: block;
-	margin: 0 auto;
-}
-.paragraph_7 {
-	display: inline-block;
-	width: 300px;
-	border: 4px solid crimson;
-	vertical-align: top;
-	margin: 10px;
-}
-.paragraph_7 a {
-	display: block;
-	color: floralwhite;
-	padding: 10px;
-	text-align: center;
-}
-.paragraph_7 p {
-	padding: 10px;
-}
-.paragraph_7 p:nth-child(even) {
-	background-color: rgb(83, 1, 1);
-	font-weight: 700;
-	text-align: right;
-}
-/* ======================================= */
-.paragraph_8 img {
-	width: 250px;
-	display: block;
-	margin: 0 auto;
-}
-.paragraph_8 {
-	display: inline-block;
-	width: 300px;
-	border: 3px solid crimson;
-	vertical-align: top;
-	margin: 10px;
-}
-.paragraph_8 a {
-	display: block;
-	text-align: center;
-	padding: 10px;
-	letter-spacing: 2px;
-}
-.paragraph_8 p {
-	padding: 10px 10px 0 15px;
-}
-.paragraph_8 p::before {
-	margin: 0 0px 0 -10px;
-	content: "";
-	width: 10px;
-	height: 10px;
-	display: inline-block;
-	background-color: crimson;
+	box-shadow: 3px 0px 7px 4px rgb(59, 59, 59);
 	border-radius: 5px;
 }
-.paragraph_8 p:hover::before {
-	background-color: darkblue;
-	border-radius: 0%;
+.header_sub_list > li {
+	min-width: 140px;
+	margin: 0 0 15px 0;
 }
-.paragraph_8 p:first-of-type {
-	text-decoration:underline;
+.header_sub_list > li:hover .header_sub_list_3{
+	display: block;
 }
-/* ======================================== */
 
-
-.footer {
-	margin-top: 50px;
-	height: 500px;
-	background: linear-gradient(to bottom, rgba(110,129,155,1) 40%,rgba(7,11,12,1) 100%);
-	background-attachment: fixed;
+.header_sub_list > li:hover .header_sub_list_5{
+	display: block;
 }
-.footer_info {
-	font-size: 40px;
-	text-align: center;
-	padding: 50px 0 0 0;
+.header_sub_list > li:hover .header_sub_list_6{
+	display: block;
+}
+.header_sub_list li:last-child {
+	margin-bottom: 0;
+}
+.header_sub_link {
+	color: rgb(238, 238, 238);
+}
+.header_sub_list_3 {
+	position: absolute;
+	top: 83px;
+	left: 160px;
+	display: none;
+	padding: 10px;
+	min-width: 180px;
+	background-color: rgb(102, 101, 101);
+	box-shadow: inset 0px 0px 2px 5px rgb(59, 59, 59);
+	border-radius: 5px;
+}
+.header_sub_list_3 li {
+	padding: 0px;
+}
+.header_sub_link_3 {
+	display: inline-block;
+	color: rgb(240, 240, 240);
+	margin: 0 0 20px 0;
+}
+.header_sub_list_5 {
+	display: none;
+	position: absolute;
+	top: 0px;
+	left: 160px;
+	min-width: 150px;
+	background-color: rgb(102, 101, 101);
+	box-shadow: inset 0px 0px 2px 5px rgb(59, 59, 59);
+	border-radius: 5px;
+}
+.header_sub_list_5 li {
+	padding: 10px;
+}
+.header_sub_link_5 {
+	color: aliceblue;
+}
+.header_sub_list li:hover {
+	text-decoration: underline;
+}
+.header_sub_list_6 {
+	position: absolute;
+	top: 195px;
+	right: 160px;
+	display: none;
+	padding: 10px;
+	min-width: 180px;
+	background-color: rgb(102, 101, 101);
+	box-shadow: inset 0px 0px 2px 5px rgb(59, 59, 59);
+	border-radius: 5px;
+}
+.header_sub_list_6 li {
+	padding: 0px;
+}
+.header_sub_link_6 {
+	display: inline-block;
+	color: rgb(240, 240, 240);
+	margin: 0 0 20px 0;
 }
